# AI-PSY

./: .env.example  LICENSE  README.md  docker-compose.yml  history.md
backend/: Dockerfile  pyproject.toml
backend/app/: models.py
backend/app/api/: main.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py  middlewares.py
backend/app/documents/additional_resources/articles/: Starshenbaum_Nastolnaya_kniga_psihologa_masterstvo_obshcheniya_s.txt
backend/app/documents/psychology/: example.txt
backend/app/documents/psychology/psy_directions/cbt/: cbt_example.txt  uoller_g_korderi_kh_korstorfin_e_i_dr_kognitivnopovedenchesk.txt  Бек_Дж_Когнитивно_поведенческая_терапия_От_основ_к_направлениям.txt  Бернс_Д_Терапия_настроения_Клинически_доказанный_способ_победить.txt
backend/app/documents/psychology/psy_directions/gestalt/: Kaliteevskaya_E_-_Diagnostika_v_geshtaltterapii.txt  buliubash_id_rukovodstvo_po_geshtaltterapii.txt
backend/app/documents/psychology/psy_directions/psychoanalysis/: Iscelenie-Absurdom.txt  example.txt  Адлер Альфред. Техника лечения.txt
backend/app/documents/psychology/psy_problems/panic/: panic_example.txt
backend/app/prompts/: prompt.py
backend/app/prompts/psy_directions/: direction_prompts.py
backend/app/prompts/psy_problems/: problem_prompts.py
backend/app/utils/: token_counter.py
backend/app/vectors/: agent.py  multi_direction_chain.py  prompt.py  vector.py
backend/app/vectors/psy_directions/: direction_prompts.py
backend/app/vectors/psy_problems/: problem_prompts.py
backend/chroma_db/: chroma.sqlite3
(+31 files in other folders)
