[project]
name = "ai-psy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.3.1",
    "openai>=1.59.9",
    "pydantic-settings>=2.7.1",
    "ruff>=0.9.2",
    "unstructured>=0.16.14",
    "uvicorn>=0.34.0",
]
